# article-epub

./: .gitignore  README.md  article-epub.py  pyproject.toml
article_epub/: __init__.py  __main__.py  publisher.py  utilities.py
article_epub/calibre/: __init__.py  constants.py  polyglot_builtins.py  polyglot_urllib.py  prints.py  ptempfile.py  startup.py
article_epub/calibre/customize/: __init__.py  builtins.py  conversion.py  profiles.py  ui.py  zipplugin.py
article_epub/calibre/db/: __init__.py  constants.py
article_epub/calibre/devices/: __init__.py  interface.py
article_epub/calibre/ebooks/: __init__.py  chardet.py  css_transform_rules.py  html_entities.py  html_transform_rules.py
article_epub/calibre/ebooks/conversion/: __init__.py  cli.py  plumber.py  preprocess.py
article_epub/calibre/ebooks/html/: to_zip.py
article_epub/calibre/ebooks/metadata/: __init__.py  archive.py  author_mapper.py  opf2.py  opf3.py  toc.py  utils.py
article_epub/calibre/resources/: default_tweaks.py
article_epub/calibre/spell/: __init__.py
article_epub/calibre/translations/: dynamic.py
article_epub/calibre/utils/: cleantext.py  config.py  config_base.py  date.py  formatter.py  formatter_functions.py  icu.py  iso8601.py  localization.py  logging.py  resources.py  serialize.py  shared_file.py  short_uuid.py  terminal.py  xml_parse.py  zipfile.py
article_epub/publishers/: annualreviews.py  bioone.py  nature.py  nih.py  nrc.py  oxford.py  plosone.py  royalsociety.py  sciencedirect.py  springer.py  tandf.py  uchicago.py  wiley.py
(+11 files in other folders)
